style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* || general */
:root{
    margin: 0;
    padding: 0;
}

body{
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 4fr;
    grid-template-areas: 'sidebar header'
                         'sidebar dashboard';
}

.avatar{
    max-width: 100%;
}

.icon{
    width: calc(1.25rem + 0.83vh);
}
/* || Layout section */
/* ||| Header, footer and dashboard container layout */
.header{
    grid-area: header;
}

.sidebar{
    grid-area: sidebar;
}

.dashboard-container{
    grid-area: dashboard;
}

/* ||| Sidebar layout */
.logo{
    display: flex;
    justify-content: flex-start;
    gap: 1vh;
}

.logo > h1{
    font-size: calc(1rem + 1vw);
    align-self: center;
}

.logo > img {
    width: calc(1rem + 1vw);
}

.sidebar{
    padding: 3vh;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(20, 5%);
}

.navbar{
    display: grid;
    grid-template-columns: 1fr 7fr;
    grid-template-rows: subgrid;
    align-items: center;
    gap: 1vh;
}

.navlink{
    grid-column: span 2;
    display: grid;
    grid-template-columns: subgrid;
    grid-template-rows: 1fr;
    align-items: center;
    padding: 0.8vh;
}

.navlink > h1{
    align-self: center;
}

#content-links-container{
    grid-area: 3 / 1 / 9 / 2;
}

#configuration-links-container{
    grid-area: 10 / 1 / 13 / 2;
}

/* ||| Header layout */
.header{
    display: flex;
    justify-content: center;
    align-items: center;
}

.header-grid-container{
    flex-grow: 1;

    margin: 3vh;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 2fr;
    gap: 1vh;
}

.search-container{
    display: flex;
    align-items: center;
    gap: 1vh;
}

.search-btn{
    display: flex;
    justify-content: center;
    align-items: center;
}

.account-container{
    display: flex;
    gap: 3vh;
    justify-content: end;
    align-items: center;
}

.greetings-container{
    display: flex;
    gap: 3vh;
    justify-content: flex-start;
    align-items: center;
}

.project-controls-container{
    display: flex;
    gap: 5vh;
    justify-content: space-around;
    align-items: center;
}

.project-control{
    display: flex;
    justify-content: center;
    align-items: center;
}

.greetings-container>.avatar {
    grid-area: 1 / 1 / 3 / 2;
}

.greetings-container>.greeting{
    grid-area: 1 / 2 / 2 / 3;
}

/* ||| Main Layout */

.dashboard-container{
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr;
    gap: 1vh;
    margin: 0vh 3vh;
}

.main-content{
    grid-area: 1 / 1 / 2 / 2;
    display: grid;
    grid-template-rows: 5vh;
    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
    gap: 1vh;
}

.main-content-header{
    grid-area: 1 / 1 / 2 / -1;
}

.minimal-button{
    display: flex;
    justify-content: center;
    align-items: center;
}

.h1-wrapper{
    display: flex;
    align-items: flex-end;
}

.announcements-trending-container{
    height: 75vh;
    grid-area: 1 / 2 / 2 / 3;

    display: grid;
    grid-template-columns: subgrid;
    grid-template-rows: 5vh 1fr 5vh 1fr;
    gap: 1vh;
}

.announcements-container{
    align-items: stretch;
    justify-content: space-evenly;
    padding: 3vh;
}

.announcements-container hr{
    margin-left: 0;
    margin-right: 0;
}

.announcements-container h1{
    margin-bottom: 0.5vh;
}

.content{
    display: flex;
    flex-direction: column;
    gap: 1vh;
}

.content > p{
    flex-grow: 1;
}

.content-buttons-container{
    display: flex;
    justify-content: flex-end;
    gap: 2vh;
}

.content.trending-container{
    padding: 3vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 1vh;
}

.trending-account{
    display: flex;
    align-items: center;
    gap: 1vh;
}

.trending-account .avatar{
    height: 5vh;
}

.trending-account div{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 0.5vh;
}
/* || Styling sections */
:root{
    --main-background-color: #e2e8f0;
    --sidebar-background-color1: #a78bfa;
    --sidebar-background-color2: #5b21b6;
    --purple-hover-color: #7c3aed;
    --sidebar-background-gradient: linear-gradient(var(--sidebar-background-color2), 80%, var(--sidebar-background-color1));
    --header-background-color: #f8fafc;
    --black-font: #020617;
    --content-paragraph-color: rgb(71, 71, 71);
    color: var(--black-font);

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
body{
    background-color: var(--main-background-color);
}

h1, h2, p{
    font-weight: bold;
}

h1{
    font-size: calc(0.5rem + 0.83vh);
}

input{
    font-size: calc(0.5rem + 0.83vh);
}

/* ||| Sidebar styling */
.sidebar{
    background-image: var(--sidebar-background-gradient);
    color: var(--header-background-color);

    font-weight: bold;
}

.navlink{
    border-radius: 999px;
}

.navlink:hover{
    background-color: var(--purple-hover-color);
}

.header{
    background-color: var(--header-background-color);
}

.content{
    background-color: var(--header-background-color);
    border: solid 1px var(--header-background-color);
    border-radius: 1vh;
}

/* ||| Searchbar styling */
.minimal-button{
    border: none;
    border: solid var(--header-background-color);
    border-radius: 999px;
}

.minimal-button > img{
    margin: 0.5vh;
}

.minimal-button:hover{
    background-color: var(--main-background-color);
}

.search_bar{
    flex-grow: 1;
    background-color: var(--main-background-color);

    border-radius: 999px;
    border: solid var(--main-background-color);

    padding: 0.5vh 1vh;
}

.search-btn{
    background-color: var(--header-background-color);
}

/* ||| Account info styling */
.avatar{
    border: 0.25vh solid var(--sidebar-background-color2);
    border-radius: 999px;
}

.avatar:hover{
    border-color: var(--purple-hover-color);
}

.account-container > .avatar{
    height: 5vh;
}

.greetings-container > .avatar{
    height: 10vh;
}

.notifications{
    background-color: var(--header-background-color);
}

/*||| Greeting styling */

.greetings-container > div > .account-name{
    font-size: calc(1rem + 0.83vh);
    margin-top: 1vh;
}

/*||| Controls styling */

.project-control{
    background-color: var(--sidebar-background-color2);
    color: var(--header-background-color);

    border: solid var(--sidebar-background-color2);
    border-radius: 999px;

    font-size: calc(0.5rem + 0.83vh);
    font-weight: bold;

    flex-grow: 1;
    height: 3.5vh;
}

.project-control:hover{
    background-color: var(--purple-hover-color);
    border-color: var(--purple-hover-color);
}

.main-content > .content{
    padding: 2.5vh;

    border-left: 0.5vh solid #5b21b6;
}

.content p{
    font-weight: 400;
    font-size: calc(0.4rem + 0.83vh);
    color: var(--content-paragraph-color);
}

.content-buttons-container > button{
    background-color: var(--header-background-color);
    border: none;
}

.content-buttons-container > button > img{
    width: calc(0.85rem + 0.83vh);
}

.announcements-container hr{
    color: var(--main-background-color);
}

